Bug 464162 - Apache does not accept IPv6 addresses with a scope id in the Host: header; r+sr=cbiesinger